Made minor changes

--- a/tenet.html
+++ b/tenet.html
@@ -10,6 +10,7 @@
 <style>
     input {
         border-radius: 25px;
+        font-size:30pt;
     }
     input:focus {
         outline: none;
@@ -21,6 +22,7 @@
         color: white;
         padding: 15px 25px;
         outline: none;
+        font-size:30pt;
     }
 
     button:focus {
@@ -101,6 +103,7 @@
         }
         
         document.getElementById('btn').style.background = "#B80F0A"
+        await sleep(200)
         window.close();
     }
     
